--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "router": "^2.2.0",
+    "serve": "^14.2.4",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
